[tool.poetry]
name = "chips"
version = "0.1.0"
description = "An easy to learn programming language."
authors = ["repl.it user sarangmaker0218@gmail.com"]

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.48.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
